# cicd

./: .cursorrules  AUTODEPLOY.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  todo.md  todo.txt
.deploy/: cicd.yaml
.deploy/cicd/: deployment.yaml  ingress.yaml  secrets.yaml  service.yaml
examples/: sample-cronjob-deploy-config.yaml
kubernetes/: cicd-operator-admin.yaml  cicd-operator.yaml  deploy-config-crd.yaml  readme.md
kubernetes/crds/: deploy-config-crd.yaml
kubernetes/examples/: new-sample-deploy-config.yaml  sample-cronjob-deploy-config.yaml  sample-deploy-config copy.yaml
src/: build_status.rs  crab_ext.rs  db.rs  discord.rs  error.rs  github_deployments.rs  graphql.rs  main.rs  metrics.rs  old_db.rs  portainer.rs  resource.rs  webhooks.rs
src/db/: autodeploy_state.rs  deploy_config.rs  deploy_config_version.rs  deploy_event.rs  functions.rs  git_branch.rs  git_commit.rs  git_commit_branch.rs  git_commit_build.rs  git_commit_parent.rs  git_repo.rs  migrations.rs  mod.rs
src/kubernetes/: api.rs  controller.rs  deploy_config.rs  deploy_config_status_builder.rs  deploy_handlers.rs  deployconfig.rs  mod.rs  repo.rs  spec_editing.rs  webhook_handlers.rs
src/mcp/: handler.rs  mod.rs  protocol.rs  tools.rs
src/res/: deploy.css  styles.css
src/web/: all_recent_builds.rs  bootstrap.rs  build_status_helpers.rs  deploy_configs.rs  deploy_history.rs  formatting.rs  fragments.rs  header.rs  htmx.rs  index.rs  mod.rs  resource_logs.rs  resource_status.rs  settings.rs  styles.css  team_prefs.rs  teams.rs  watchdog.rs
src/web/pages/: all_recent_builds.rs  deploy_configs.rs  index.rs  mod.rs
src/webhooks/: README.md  config_sync.rs  database.rs  log.rs  manager.rs  metrics.rs  mod.rs  models.rs  util.rs
