[package]
name = "cicd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
futures-util = { version = "0.3.17", default-features = false, features = [
  "std",
] }
actix-web = "4"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rusqlite = "0.31"
rusqlite_migration = "1.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_variant = "0.1.3"
log = "0.4"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
pwhash = "1"
tokio-tungstenite = "0.21.0"
url = "2.5.0"
tokio = { version = "1.37.0", features = [
  "io-std",
  "macros",
  "rt-multi-thread",
] }
chrono = "0.4.38"
reqwest = { version = "0.12.4", features = ["json"] }
async-graphql = "7.0.5"
async-graphql-actix-web = "7.0.5"
regex = "1.10.4"
maud = { version = "0.26.0", features = ["actix-web"] }
serenity = { version = "0.12.0", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
] }
thiserror = "1.0.56"
anyhow = "1.0.80"

# Kubernetes related dependencies
kube = { version = "0.99.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["v1_32"] }
schemars = "0.8.22"

# metrics
actix-web-opentelemetry = { version = "0.16.0", features = [
  "metrics",
  "metrics-prometheus",
] }
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry_sdk = { version = "0.21", features = [
  "metrics",
  "rt-tokio-current-thread",
] }
opentelemetry-prometheus = { version = "0.14" }
prometheus = { version = "0.13" }
